--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>AX-LARA</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins :wght@400;600&display=swap" rel="stylesheet">
   <!-- FontAwesome CDN para ícones -->
@@ -16,58 +18,63 @@
     }
 
     /* Barra de Idiomas */
-    .language-bar {
-      position: fixed;
-      top: 0;
-      right: 0;
-      background-color: #58585846;
-      padding: 8px 16px;
-      z-index: 9999;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      font-family: 'Poppins', sans-serif;
-      display: flex;
-      gap: -10px;
-      border-bottom-left-radius: 8px;
-      border-bottom-right-radius: 8px;
-    }
-    .language-bar button {
-      background: none;
-      border: none;
-      color: #00f0ff;
-      font-weight: 600;
-      cursor: pointer;
-      font-size: 14px;
-      transition: opacity 0.3s ease;
-    }
-    .language-bar button:hover {
-      opacity: 0.7;
-    }
-/* Ajusta a barra de tradução do Google no mobile */
-.goog-te-banner-frame.skiptranslate {
-  display: none !important;
-}
-body {
-  top: 0px !important;
+.language-bar {
+  position: fixed;
+  top: 10px;
+  right: 15px;
+  z-index: 1000;
+  display: flex;
+  gap: 1px; /* distância entre as bandeiras */
+  background: none;
 }
 
-.goog-te-gadget {
-  font-family: 'Poppins', sans-serif !important;
-  font-size: 14px;
-  color: #00f0ff;
+.language-bar button {
+  background: none;
+  border: none;
+  padding: 2px;
+  cursor: pointer;
+}
+
+.language-bar img {
+  border-radius: 3px;
+  display: block;
+}
+ .language-bar button:hover {
+    opacity: 0.7;
+  }
+
+body {
+  transform: none !important; /* Corrige distorção que o Google Translate aplica */
+}
+
+.goog-te-banner-frame.skiptranslate {
+  display: block !important;
+  width: 100% !important;
+  max-width: 100vw !important;
+  left: 0 !important;
+  right: 0 !important;
+  top: 0 !important;
+  position: fixed !important;
+  z-index: 999999 !important;
+  box-sizing: border-box !important;
+}
+
+body > .goog-te-banner-frame {
+  position: fixed !important;
+  top: 0;
+  width: 100vw !important;
 }
 
 .goog-te-combo {
-  padding: 6px;
-  border-radius: 6px;
-  border: none;
-  font-family: 'Poppins', sans-serif;
-  background-color: #fff;
-  color: #333;
+  margin: 0 !important;
+  max-width: 100% !important;
+  font-size: 14px;
 }
 
-.goog-te-gadget-icon {
-  display: none;
+body > iframe {
+  max-width: 100vw !important;
 }
+
 
 @media (max-width: 768px) {
   .language-bar {
@@ -355,11 +362,14 @@ body {
 <body>
 
   <!-- Barra de Idiomas -->
-  <div class="language-bar">
-    <button onclick="translateTo('en')">EN</button>
-    <span style="margin: 0 8px;">|</span>
-    <button onclick="translateTo('es')">ES</button>
-  </div>
+<div class="language-bar">
+  <button onclick="translateTo('en')" aria-label="English">
+    <img src="https://flagcdn.com/gb.svg" alt="English" width="24" height="16">
+  </button>
+  <button onclick="translateTo('es')" aria-label="Español">
+    <img src="https://flagcdn.com/es.svg" alt="Español" width="24" height="16">
+  </button>
+</div>
 
   <!-- Google Translate Script -->
   <div id="google_translate_element" style="display: none;"></div>
