--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>AX-LARA</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins :wght@400;600&display=swap" rel="stylesheet">
-  <!-- FontAwesome CDN para ícones -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css " rel="stylesheet">
   <style>
     body {
@@ -18,77 +18,79 @@
     }
 
     /* Barra de Idiomas */
-.language-bar {
-  position: fixed;
-  top: 10px;
-  right: 15px;
-  z-index: 1000;
-  display: flex;
-  gap: 1px; /* distância entre as bandeiras */
-  background: none;
-}
+    .language-bar {
+      position: fixed;
+      top: 10px;
+      right: 15px;
+      z-index: 1000;
+      display: flex;
+      gap: 1px;
+      /* distância entre as bandeiras */
+      background: none;
+    }
 
-.language-bar button {
-  background: none;
-  border: none;
-  padding: 2px;
-  cursor: pointer;
-}
+    .language-bar button {
+      background: none;
+      border: none;
+      padding: 2px;
+      cursor: pointer;
+    }
 
-.language-bar img {
-  border-radius: 3px;
-  display: block;
-}
- .language-bar button:hover {
-    opacity: 0.7;
-  }
+    .language-bar img {
+      border-radius: 3px;
+      display: block;
+    }
 
-body {
-  transform: none !important; /* Corrige distorção que o Google Translate aplica */
-}
+    .language-bar button:hover {
+      opacity: 0.7;
+    }
 
-.goog-te-banner-frame.skiptranslate {
-  display: block !important;
-  width: 100% !important;
-  max-width: 100vw !important;
-  left: 0 !important;
-  right: 0 !important;
-  top: 0 !important;
-  position: fixed !important;
-  z-index: 999999 !important;
-  box-sizing: border-box !important;
-}
+    body {
+      transform: none !important;
+    }
 
-body > .goog-te-banner-frame {
-  position: fixed !important;
-  top: 0;
-  width: 100vw !important;
-}
+    .goog-te-banner-frame.skiptranslate {
+      display: block !important;
+      width: 100% !important;
+      max-width: 100vw !important;
+      left: 0 !important;
+      right: 0 !important;
+      top: 0 !important;
+      position: fixed !important;
+      z-index: 999999 !important;
+      box-sizing: border-box !important;
+    }
 
-.goog-te-combo {
-  margin: 0 !important;
-  max-width: 100% !important;
-  font-size: 14px;
-}
+    body>.goog-te-banner-frame {
+      position: fixed !important;
+      top: 0;
+      width: 100vw !important;
+    }
 
-body > iframe {
-  max-width: 100vw !important;
-}
+    .goog-te-combo {
+      margin: 0 !important;
+      max-width: 100% !important;
+      font-size: 14px;
+    }
+
+    body>iframe {
+      max-width: 100vw !important;
+    }
 
 
-@media (max-width: 768px) {
-  .language-bar {
-    top: 0;
-    right: 0;
-    flex-wrap: wrap;
-  }
+    @media (max-width: 768px) {
+      .language-bar {
+        top: 0;
+        right: 0;
+        flex-wrap: wrap;
+      }
 
-  .goog-te-combo {
-    font-size: 13px;
-    width: 100%;
-    margin-top: 6px;
-  }
-}
+      .goog-te-combo {
+        font-size: 13px;
+        width: 100%;
+        margin-top: 6px;
+      }
+    }
 
     /* Marca AX-LARA */
     .axlara-brand {
@@ -108,37 +110,44 @@ body > iframe {
       padding: 4rem;
       flex-wrap: wrap;
     }
+
     .container {
       max-width: 700px;
     }
+
     h1 {
       font-size: 2.5rem;
       font-weight: bold;
       line-height: 1.2;
     }
+
     h2 {
       font-size: 1.5rem;
       color: #757474;
       margin-top: 1rem;
     }
+
     .highlight-link {
-  color: #08bac7; /* substitua pela cor azul que você está usando */
-  text-decoration: none;
-}
-.highlight-link:hover {
-  text-decoration: underline;
-}
+      color: #08bac7;
+      text-decoration: none;
+    }
+
+    .highlight-link:hover {
+      text-decoration: underline;
+    }
 
     .byline {
       font-size: 0.9rem;
       color: #999;
       margin-top: 0.5rem;
     }
+
     .hero-image img {
       width: 400px;
       margin-bottom: -67px;
       opacity: 0.9;
     }
+
     .button {
       color: #08bac7;
       margin-right: 15px;
@@ -159,16 +168,19 @@ body > iframe {
       padding: 60px 20px;
       font-family: 'Inter', sans-serif;
     }
+
     .section2 .intro-lara {
       max-width: 900px;
       margin: 0 auto;
     }
+
     .section2 h2 {
       font-size: 1.5rem;
       font-weight: 500;
       margin-bottom: 1rem;
       line-height: 1.4;
     }
+
     .section2 .ola {
       font-size: 2.5rem;
       font-weight: 700;
@@ -176,6 +188,7 @@ body > iframe {
       display: block;
       line-height: 1.2;
     }
+
     .section2 p {
       font-size: 1.2rem;
       line-height: 1.7;
@@ -183,6 +196,7 @@ body > iframe {
       margin-top: 1rem;
       margin-bottom: 1.5rem;
     }
+
     .section2 strong {
       color: #00f0ff;
       font-weight: 600;
@@ -192,127 +206,131 @@ body > iframe {
       .section2 {
         padding: 1.5rem 1rem;
       }
+
       .section2 h2 {
         font-size: 1rem;
       }
+
       .section2 .ola {
         font-size: 1.8rem;
       }
+
       .section2 p {
         font-size: 0.95rem;
       }
     }
 
-   /* Seção AIVRSE */
-.section3 {
-  display: flex;
-  flex-direction: column; /* Para mobile */
-  align-items: center;
-  background-color: #333;
-  gap: 40px;
-  padding: 40px 20px;
-}
+    /* Seção AIVRSE */
+    .section3 {
+      display: flex;
+      flex-direction: column;
+      /* Para mobile */
+      align-items: center;
+      background-color: #333;
+      gap: 40px;
+      padding: 40px 20px;
+    }
 
-.section3 p {
-  font-size: 1.2rem;
-    line-height: 1.7;
-    color: #ccc;
-    text-align: center;
-}
+    .section3 p {
+      font-size: 1.2rem;
+      line-height: 1.7;
+      color: #ccc;
+      text-align: center;
+    }
 
-.section3-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 20px;
-  padding: 40px;
-}
+    .section3-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 20px;
+      padding: 40px;
+    }
 
-/* Estilo dos Cards */
-.service-card {
- background-color: #1f1f1f;
-  padding: 20px;
-  border-radius: 12px;
-  text-align: center;
-  width: 100%;
-  max-width: 320px;
-  box-shadow: 0 0 5px rgba(0, 240, 255, 0.8), inset 0 0 5px rgba(0, 240, 255, 0.8);
-  color: inherit;
-  text-decoration: none;
-  transition: transform 0.3s ease;
-}
+    /* Estilo dos Cards */
+    .service-card {
+      background-color: #1f1f1f;
+      padding: 20px;
+      border-radius: 12px;
+      text-align: center;
+      width: 100%;
+      max-width: 320px;
+      box-shadow: 0 0 5px rgba(0, 240, 255, 0.8), inset 0 0 5px rgba(0, 240, 255, 0.8);
+      color: inherit;
+      text-decoration: none;
+      transition: transform 0.3s ease;
+    }
 
-.service-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(0, 240, 255, 0.2);
-}
+    .service-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 20px rgba(0, 240, 255, 0.2);
+    }
 
-.service-card img {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 10px;
-  margin-bottom: 15px;
-}
+    .service-card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 15px;
+    }
 
 
-.service-card .texto h3 {
-  color: #00ffff;
-  font-size: 24px;
-  margin-bottom: 10px;
-  text-align: center;
-}
+    .service-card .texto h3 {
+      color: #00ffff;
+      font-size: 24px;
+      margin-bottom: 10px;
+      text-align: center;
+    }
 
-.service-card .texto p {
-  color: #ccc;
-  font-size: 16px;
-  line-height: 1.5;
-}
+    .service-card .texto p {
+      color: #ccc;
+      font-size: 16px;
+      line-height: 1.5;
+    }
 
-/* Responsividade para Desktop */
-@media (min-width: 768px) {
-  .section3-container {
-    flex-direction: row; /* Alinha os cards horizontalmente no desktop */
-  }
+    /* Responsividade para Desktop */
+    @media (min-width: 768px) {
+      .section3-container {
+        flex-direction: row;
+      }
 
-  .service-card {
-    flex-direction: column; /* Mantém a direção vertical */
-    text-align: left; /* Alinha o texto à esquerda */
-  }
-}
+      .service-card {
+        flex-direction: column;
+        text-align: left;
+      }
+    }
 
-/* Responsividade para Mobile */
-@media (max-width: 768px) {
-  .service-card {
-    flex-direction: column; /* Altera para coluna no mobile */
-    align-items: center; /* Centraliza verticalmente */
-    text-align: center; /* Alinha texto ao centro */
-  }
+    /* Responsividade para Mobile */
+    @media (max-width: 768px) {
+      .service-card {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
 
-  .service-card img {
-    width: 100%; /* Imagem ocupa toda a largura */
-    height: auto; /* Mantém proporção correta */
-    margin: 0 auto 15px; /* Centraliza e adiciona espaço abaixo */
-  }
+      .service-card img {
+        width: 100%;
+        height: auto;
+        margin: 0 auto 15px;
+      }
 
-  .service-card .texto {
-    text-align: center; /* Alinha texto ao centro */
-  }
-}
+      .service-card .texto {
+        text-align: center;
+      }
+    }
 
-  
+
     /* Footer */
 
     footer {
-  background-color: #111;
-  color: #fff;
-  padding: 20px;
-  width: 100%;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+      background-color: #111;
+      color: #fff;
+      padding: 20px;
+      width: 100%;
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
 
     footer .social-icons i {
       color: #00f0ff;
@@ -321,19 +339,21 @@ body > iframe {
       cursor: pointer;
       transition: color 0.3s ease;
     }
+
     footer .social-icons i:hover {
       color: #08bac7;
     }
-@media (max-width: 768px) {
-  .section3-container {
-    padding: 20px 10px;
-  }
 
-  footer {
-    padding: 20px 10px;
-    box-sizing: border-box;
-  }
-}
+    @media (max-width: 768px) {
+      .section3-container {
+        padding: 20px 10px;
+      }
+
+      footer {
+        padding: 20px 10px;
+        box-sizing: border-box;
+      }
+    }
 
     /* Responsividade Geral */
     @media (max-width: 768px) {
@@ -342,34 +362,39 @@ body > iframe {
         padding: 2rem 1rem;
         text-align: center;
       }
+
       .hero-image img {
         width: 80%;
         margin-bottom: -37px;
       }
+
       h1 {
         font-size: 2rem;
       }
+
       h2 {
         font-size: 1.2rem;
       }
+
       .container {
         max-width: 95%;
       }
-      
+
     }
   </style>
 </head>
+
 <body>
 
   <!-- Barra de Idiomas -->
-<div class="language-bar">
-  <button onclick="translateTo('en')" aria-label="English">
-    <img src="https://flagcdn.com/gb.svg" alt="English" width="24" height="16">
-  </button>
-  <button onclick="translateTo('es')" aria-label="Español">
-    <img src="https://flagcdn.com/es.svg" alt="Español" width="24" height="16">
-  </button>
-</div>
+  <div class="language-bar">
+    <button onclick="translateTo('en')" aria-label="English">
+      <img src="https://flagcdn.com/gb.svg" alt="English" width="24" height="16">
+    </button>
+    <button onclick="translateTo('es')" aria-label="Español">
+      <img src="https://flagcdn.com/es.svg" alt="Español" width="24" height="16">
+    </button>
+  </div>
 
   <!-- Google Translate Script -->
   <div id="google_translate_element" style="display: none;"></div>
@@ -404,7 +429,7 @@ body > iframe {
     <div class="container">
       <div class="axlara-brand">AX-LARA</div>
       <h1>Architect of Xperience</h1>
-     <h2>XR Specialist • 3D Designer • Founder <a href="#section3" class="highlight-link">AIVRSE</a></h2>
+      <h2>XR Specialist • 3D Designer • Founder <a href="#section3" class="highlight-link">AIVRSE</a></h2>
       <p class="byline">by Lara E. Negreiros</p>
       <a href="portfolio.html" class="button">Stack & Skills</a>
     </div>
@@ -417,19 +442,30 @@ body > iframe {
   <section class="section2" id="lara">
     <div class="intro-lara">
       <h2><span class="ola">Olá,</span> sou Lara E. Negreiros.</h2>
-      <p>Criadora e desenvolvedora de experiências ambientais imersivas. Guiada pelas emoções provocadas pelos espaços, busco, através da tecnologia, novas formas de criar experiências que conectem o físico ao virtual.</p>
-      <p>Minha jornada começou na arquitetura e urbanismo, com especialização em projetos arquitetônicos e neuroarquitetura, onde criei experiência em percepção espacial e design efetivo de ambientes. Com o tempo, surgiu o desejo e necessidade de ir além dos limites tradicionais da arquitetura, o que me levou a explorar a tecnologia como novo campo de atuação.</p>
-      <p>Durante essa transição, aprofundei meus estudos em programação e descobri as tecnologias imersivas (XR), onde encontrei a conexão perfeita entre minha bagagem em arquitetura e as novas possibilidades digitais. A partir daí, passei a expandir minhas habilidades na criação de ambientes digitais interativos.</p>
-      <p><strong>Hoje, me especializo em criar experiências imersivas utilizando softwares e tecnologias que permitem transformar espaços físicos em ambientes digitais interativos. Além disso, ofereço serviços como freelancer em modelagem 3D otimizada para ambientes interativos</strong> e <strong>tours virtuais 360°</strong>, com soluções personalizadas para diversos tipos de projetos.</p>
-      <p>Em breve, estarei lançando oficialmente a AIVRSE, focado na criação de mundos virtuais personalizados e no desenvolvimento de experiências imersivas. Através dele, pretendo oferecer soluções inovadoras para diferentes áreas e necessidades virtuais.</p>
+      <p>Criadora e desenvolvedora de experiências ambientais imersivas. Guiada pelas emoções provocadas pelos espaços,
+        busco, através da tecnologia, novas formas de criar experiências que conectem o físico ao virtual.</p>
+      <p>Minha jornada começou na arquitetura e urbanismo, com especialização em projetos arquitetônicos e
+        neuroarquitetura, onde criei experiência em percepção espacial e design efetivo de ambientes. Com o tempo,
+        surgiu o desejo e necessidade de ir além dos limites tradicionais da arquitetura, o que me levou a explorar a
+        tecnologia como novo campo de atuação.</p>
+      <p>Durante essa transição, aprofundei meus estudos em programação e descobri as tecnologias imersivas (XR), onde
+        encontrei a conexão perfeita entre minha bagagem em arquitetura e as novas possibilidades digitais. A partir
+        daí, passei a expandir minhas habilidades na criação de ambientes digitais interativos.</p>
+      <p><strong>Hoje, me especializo em criar experiências imersivas utilizando softwares e tecnologias que permitem
+          transformar espaços físicos em ambientes digitais interativos. Além disso, ofereço serviços como freelancer em
+          modelagem 3D otimizada para ambientes interativos</strong> e <strong>tours virtuais 360°</strong>, com
+        soluções personalizadas para diversos tipos de projetos.</p>
+      <p>Em breve, estarei lançando oficialmente a AIVRSE, focado na criação de mundos virtuais personalizados e no
+        desenvolvimento de experiências imersivas. Através dele, pretendo oferecer soluções inovadoras para diferentes
+        áreas e necessidades virtuais.</p>
     </div>
   </section>
 
-  <!-- Seção AIVRSE -->
   <section class="section3" id="section3">
     <img src="/imagens/logoaivrse1transp.png" alt="logoaivrse" width="300px">
     <p>Bem-vindo ao universo da tecnologia imersiva — onde sonhos ganham forma, cor e movimento,
-      transformando projetos em experiências reais. <br> Conheça e explore nossos projetos em Tour Virtual 360°. Em breve, também ofereceremos experiências em Realidade Aumentada e Realidade Virtual.</p>
+      transformando projetos em experiências reais. <br> Conheça e explore nossos projetos em Tour Virtual 360°. Em
+      breve, também ofereceremos experiências em Realidade Aumentada e Realidade Virtual.</p>
 
     <!-- Container dos Cards -->
     <div class="section3-container">
@@ -461,8 +497,7 @@ body > iframe {
       </div>
     </div>
   </section>
-
-  <!-- Footer -->
+  
   <footer>
     <div class="social-icons">
       <a href="https://github.com/larangrs " target="_blank"><i class="fab fa-github"></i></a>
@@ -472,4 +507,5 @@ body > iframe {
   </footer>
 
 </body>
+
 </html>
