--- a/portfolio.html
+++ b/portfolio.html
@@ -1,259 +1,263 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perfil Técnico - AX-LARA</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
-   body {
-  margin: 0;
-  font-family: 'Poppins', sans-serif;
-  background-color: #111;
-  color: #ccc;
-  line-height: 1.7;
-}
+    body {
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background-color: #111;
+      color: #ccc;
+      line-height: 1.7;
+    }
 
-header {
-  background-color: #f0f0f0;
-  color: #111;
-  text-align: center;
-  padding: 10px 10px;
-}
+    header {
+      background-color: #f0f0f0;
+      color: #111;
+      text-align: center;
+      padding: 10px 10px;
+    }
 
-header h2 {
-  font-size: 1.3rem;
-  color: #00f0ff;
-  margin: 0;
-}
+    header h2 {
+      font-size: 1.3rem;
+      color: #00f0ff;
+      margin: 0;
+    }
 
-header h1 {
-  font-size: 1.5rem;
-  margin: 5px 0;
-}
+    header h1 {
+      font-size: 1.5rem;
+      margin: 5px 0;
+    }
 
-header p {
-  font-size: 0.9rem;
-  color: #555;
-  margin: 5px 0;
-}
+    header p {
+      font-size: 0.9rem;
+      color: #555;
+      margin: 5px 0;
+    }
 
-.container {
-  max-width: 900px;
-  margin: 40px auto;
-  padding: 0 20px;
-}
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
 
-.intro {
-  margin-bottom: 30px;
-  text-align: center;
-  padding: 0 10px;
-}
+    .intro {
+      margin-bottom: 30px;
+      text-align: center;
+      padding: 0 10px;
+    }
 
-.intro p {
-  font-size: 1.1rem;
-  color: #bbb;
-  margin-bottom: 15px;
-}
+    .intro p {
+      font-size: 1.1rem;
+      color: #bbb;
+      margin-bottom: 15px;
+    }
 
-.section {
-  margin-bottom: 40px;
-}
+    .section {
+      margin-bottom: 40px;
+    }
 
-.section h2 {
-  font-size: 1.5rem;
-  color: #00f0ff;
-  margin-bottom: 15px;
-}
-
-.section ul {
-  list-style-type: disc;
-  padding-left: 20px;
-}
-
-.section li {
-  margin-bottom: 10px;
-  color: #bbb;
-}
-/* Botão Voltar */
-.btn-voltar {
-  background-color: #1a1a1a;
-  border: 1px solid #00fff7;
-  color: #00fff7;
-  width: 50px; /* Define a largura do botão */
-  height: 50px; /* Define a altura do botão */
-  border-radius: 50%; /* Faz o botão circular (metade da largura/altura) */
-  font-size: 1em;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  bottom: 20px; /* Posiciona no canto inferior */
-  left: 20px; /* Posiciona no canto esquerdo */
-  margin-top: -40px;
-  z-index: 999;
-  display: flex;
-  align-items: center;
-  justify-content: center; /* Centraliza horizontalmente */
-  text-decoration: none;
-}
-
-.btn-voltar::before {
-  content: "←";
-  font-size: 1.2em;
-  display: inline-block;
-}
-
-.btn-voltar:hover {
-  background-color: #00fff7;
-  color: #000;
-}
-
-/* Media Queries para Responsividade */
-
-@media (max-width: 768px) {
-  .btn-voltar {
-    width: 40px; /* Reduz o tamanho do botão em telas menores */
-    height: 40px;
-    font-size: 0.9em; /* Ajusta o tamanho do texto */
-  }
-}
-
-@media (max-width: 480px) {
-  .btn-voltar {
-    width: 30px; /* Reduz ainda mais o tamanho do botão */
-    height: 30px;
-    font-size: 0.8em; /* Ajusta o tamanho do texto */
-  }
-}
-
-footer {
-  background-color: #222;
-  color: #ccc;
-  text-align: center;
-  padding: 20px;
-}
-
-footer .social-icons i {
-  color: #00f0ff;
-  font-size: 30px;
-  margin: 0 15px;
-  cursor: pointer;
-  transition: color 0.3s ease;
-}
-
-footer .social-icons i:hover {
-  color: #08bac7;
-}
-
-/* === RESPONSIVIDADE PARA MOBILE === */
-@media (max-width: 768px) {
-  header {
-    padding: 10px;
-  }
-
-  header h2 {
-    font-size: 1.2rem;
-  }
-
-  header h1 {
-    font-size: 1.3rem;
-  }
-
-  header p {
-    font-size: 0.8rem;
-  }
-
-  .container {
-    padding: 10px;
-  }
-
-  .intro p {
-    font-size: 1rem;
-  }
-
-  .section h2 {
-    font-size: 1.3rem;
-     margin-left: 10px;
-    margin-right: 10px;
-  }
+    .section h2 {
+      font-size: 1.5rem;
+      color: #00f0ff;
+      margin-bottom: 15px;
+    }
 
     .section ul {
-    margin-left: 10px;
-    margin-right: 10px;
-  }
+      list-style-type: disc;
+      padding-left: 20px;
+    }
 
-  .section li {
-    font-size: 0.9rem;
-  }
+    .section li {
+      margin-bottom: 10px;
+      color: #bbb;
+    }
 
-  footer .social-icons i {
-    font-size: 24px;
-  }
-}
+    /* Botão Voltar */
+    .btn-voltar {
+      background-color: #1a1a1a;
+      border: 1px solid #00fff7;
+      color: #00fff7;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      font-size: 1em;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      bottom: 20px;
+      left: 20px;
+      margin-top: -40px;
+      z-index: 999;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+    }
+
+    .btn-voltar::before {
+      content: "←";
+      font-size: 1.2em;
+      display: inline-block;
+    }
+
+    .btn-voltar:hover {
+      background-color: #00fff7;
+      color: #000;
+    }
+
+    /* Media Queries para Responsividade */
+
+    @media (max-width: 768px) {
+      .btn-voltar {
+        width: 40px;
+        height: 40px;
+        font-size: 0.9em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .btn-voltar {
+        width: 30px;
+        height: 30px;
+        font-size: 0.8em;
+      }
+    }
+
+    footer {
+      background-color: #222;
+      color: #ccc;
+      text-align: center;
+      padding: 20px;
+    }
+
+    footer .social-icons i {
+      color: #00f0ff;
+      font-size: 30px;
+      margin: 0 15px;
+      cursor: pointer;
+      transition: color 0.3s ease;
+    }
+
+    footer .social-icons i:hover {
+      color: #08bac7;
+    }
+
+    /* === RESPONSIVIDADE PARA MOBILE === */
+    @media (max-width: 768px) {
+      header {
+        padding: 10px;
+      }
+
+      header h2 {
+        font-size: 1.2rem;
+      }
+
+      header h1 {
+        font-size: 1.3rem;
+      }
+
+      header p {
+        font-size: 0.8rem;
+      }
+
+      .container {
+        padding: 10px;
+      }
+
+      .intro p {
+        font-size: 1rem;
+      }
+
+      .section h2 {
+        font-size: 1.3rem;
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+
+      .section ul {
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+
+      .section li {
+        font-size: 0.9rem;
+      }
+
+      footer .social-icons i {
+        font-size: 24px;
+      }
+    }
   </style>
 </head>
+
 <body>
-   <!-- Barra de Idiomas -->
-<div class="language-bar">
-  <button onclick="translateTo('en')" aria-label="English">
-    <img src="https://flagcdn.com/gb.svg" alt="English" width="24" height="16">
-  </button>
-  <button onclick="translateTo('es')" aria-label="Español">
-    <img src="https://flagcdn.com/es.svg" alt="Español" width="24" height="16">
-  </button>
-</div>
+  <!-- Barra de Idiomas -->
+  <div class="language-bar">
+    <button onclick="translateTo('en')" aria-label="English">
+      <img src="https://flagcdn.com/gb.svg" alt="English" width="24" height="16">
+    </button>
+    <button onclick="translateTo('es')" aria-label="Español">
+      <img src="https://flagcdn.com/es.svg" alt="Español" width="24" height="16">
+    </button>
+  </div>
 
-<style>
-.language-bar {
-  position: fixed;
-  top: 10px;
-  right: 15px;
-  z-index: 1000;
-  display: flex;
-  gap: 1px; /* distância entre as bandeiras */
-  background: none;
-}
-
-.language-bar button {
-  background: none;
-  border: none;
-  padding: 2px;
-  cursor: pointer;
-}
-  .language-bar button:hover {
-    opacity: 0.7;
-  }
-</style>
-<!-- Google Translate Script -->
-<div id="google_translate_element" style="display: none;"></div>
-
-<script type="text/javascript">
-  function googleTranslateElementInit() {
-    new google.translate.TranslateElement({
-      pageLanguage: 'pt',
-      includedLanguages: 'en,es,pt',
-      layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL,
-      autoDisplay: false
-    }, 'google_translate_element');
-  }
-
-  (function () {
-    var gt = document.createElement('script');
-    gt.type = 'text/javascript';
-    gt.src = '//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit';
-    document.body.appendChild(gt);
-  })();
-
-  function translateTo(lang) {
-    const select = document.querySelector('.goog-te-combo');
-    if (select) {
-      select.value = lang;
-      select.dispatchEvent(new Event('change'));
-    } else {
-      setTimeout(() => translateTo(lang), 500); // Tenta novamente se não carregou
+  <style>
+    .language-bar {
+      position: fixed;
+      top: 10px;
+      right: 15px;
+      z-index: 1000;
+      display: flex;
+      gap: 1px;
+      background: none;
     }
-  }
-</script>
+
+    .language-bar button {
+      background: none;
+      border: none;
+      padding: 2px;
+      cursor: pointer;
+    }
+
+    .language-bar button:hover {
+      opacity: 0.7;
+    }
+  </style>
+  <!-- Google Translate Script -->
+  <div id="google_translate_element" style="display: none;"></div>
+
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({
+        pageLanguage: 'pt',
+        includedLanguages: 'en,es,pt',
+        layout: google.translate.TranslateElement.InlineLayout.HORIZONTAL,
+        autoDisplay: false
+      }, 'google_translate_element');
+    }
+
+    (function () {
+      var gt = document.createElement('script');
+      gt.type = 'text/javascript';
+      gt.src = '//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit';
+      document.body.appendChild(gt);
+    })();
+
+    function translateTo(lang) {
+      const select = document.querySelector('.goog-te-combo');
+      if (select) {
+        select.value = lang;
+        select.dispatchEvent(new Event('change'));
+      } else {
+        setTimeout(() => translateTo(lang), 500); // Tenta novamente se não carregou
+      }
+    }
+  </script>
   <!-- Cabeçalho -->
   <header>
     <h2>AX-LARA</h2>
@@ -266,27 +270,30 @@ footer .social-icons i:hover {
     <!-- Introdução -->
     <div class="intro">
       <p>
-       Aqui você encontra um resumo direto das stacks, ferramentas e habilidades que fui desenvolvendo ao longo da minha jornada.
+        Aqui você encontra um resumo direto das stacks, ferramentas e habilidades que fui desenvolvendo ao longo da
+        minha jornada.
       </p>
       <p>
-        Hoje atuo como freelancer em modelagem 3D otimizada, criação de tours virtuais 360°, integração em plataformas web, além do desenvolvimento de projetos em Realidade Aumentada (AR) e Realidade Virtual (VR).
+        Hoje atuo como freelancer em modelagem 3D otimizada, criação de tours virtuais 360°, integração em plataformas
+        web, além do desenvolvimento de projetos em Realidade Aumentada (AR) e Realidade Virtual (VR).
       </p>
       <p>
-        Também utilizo ferramentas de Inteligência Artificial para acelerar fluxos de trabalho, mantendo uma postura de constante aprendizado e adaptação a novas tecnologias.
+        Também utilizo ferramentas de Inteligência Artificial para acelerar fluxos de trabalho, mantendo uma postura de
+        constante aprendizado e adaptação a novas tecnologias.
       </p>
     </div>
 
     <!-- Modelagem 3D -->
-      <div class="section">
-        <h2>Softwares: Modelagem 3D e Produção Visual</h2>
-        <ul>
-          <li>SketchUp (modelagem)</li>
-          <li>Revit (BIM)</li>
-          <li>AutoCAD (desenho técnico)</li>
-          <li>Lumion e Twinmotion (renderização)</li>
-          <li><i>Otimização de modelos para exportação</i></li>
-        </ul>
-      </div>
+    <div class="section">
+      <h2>Softwares: Modelagem 3D e Produção Visual</h2>
+      <ul>
+        <li>SketchUp (modelagem)</li>
+        <li>Revit (BIM)</li>
+        <li>AutoCAD (desenho técnico)</li>
+        <li>Lumion e Twinmotion (renderização)</li>
+        <li><i>Otimização de modelos para exportação</i></li>
+      </ul>
+    </div>
 
     <!-- Tecnologias Imersivas -->
     <div class="section">
@@ -333,7 +340,7 @@ footer .social-icons i:hover {
         <li>Unreal Engine: Fundamentos para Projetos Imersivos - VR Academy</li>
         <li>Desenvolvedor Full-stack – SENAC</li>
         <li>Neuroarquitetura: Princípios de Neurociência Aplicada - Neuroarq Academy</li>
-        <li>CAP Light Design: Iluminação Comercial e Corporativa - IPOG</li> 
+        <li>CAP Light Design: Iluminação Comercial e Corporativa - IPOG</li>
         <li>Produto & Projeto de Mobiliário - Dalmobile fabric.</li>
       </ul>
     </div>
@@ -349,4 +356,5 @@ footer .social-icons i:hover {
     <a href="index.html" class="btn-voltar"></a>
   </footer>
 </body>
+
 </html>
