--- a/portfolio.html
+++ b/portfolio.html
@@ -122,9 +122,11 @@
 
     @media (max-width: 480px) {
       .btn-voltar {
-        width: 30px;
-        height: 30px;
-        font-size: 0.8em;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        font-size: 0.9em;
+        padding: 0;
       }
     }
 
