--- a/projetos-tour.html
+++ b/projetos-tour.html
@@ -383,7 +383,17 @@
             desktop e mobile.</p>
           <button class="expand-btn" onclick="openModal('tour-galeria.html')">Abrir Tour</button>
         </div>
-      </div>
+        </div>
+
+        <div class="project-card">
+        <iframe src="tour-salahightec.html" allowfullscreen></iframe>
+        <div class="project-info">
+          <h3>Sala Hightech</h3>
+          <p>Exploração completa de um espaço comercial através de pontos de transição e rotação livre, otimizada para
+            desktop e mobile.</p>
+          <button class="expand-btn" onclick="openModal('tour-galeria.html')">Abrir Tour</button>
+        </div>
+      
     </div>
   </main>
   <div class="back-button-container">
