--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <title>AX-LARA</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins :wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css " rel="stylesheet">
   <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #e0ddd9;
-      color: #333;
-    }
+ body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  color: #333;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
+section.section3 {
+  flex: 1;
+}
     /* Barra de Idiomas */
     .language-bar {
       position: fixed;
@@ -25,30 +27,23 @@
       z-index: 1000;
       display: flex;
       gap: 1px;
-      /* distância entre as bandeiras */
       background: none;
     }
-
     .language-bar button {
       background: none;
       border: none;
       padding: 2px;
       cursor: pointer;
     }
-
     .language-bar img {
       border-radius: 3px;
       display: block;
     }
-
     .language-bar button:hover {
       opacity: 0.7;
     }
 
-    body {
-      transform: none !important;
-    }
-
+    /* Google Translate Fixes */
     .goog-te-banner-frame.skiptranslate {
       display: block !important;
       width: 100% !important;
@@ -60,23 +55,19 @@
       z-index: 999999 !important;
       box-sizing: border-box !important;
     }
-
-    body>.goog-te-banner-frame {
+    body > .goog-te-banner-frame {
       position: fixed !important;
       top: 0;
       width: 100vw !important;
     }
-
     .goog-te-combo {
       margin: 0 !important;
       max-width: 100% !important;
       font-size: 14px;
     }
-
-    body>iframe {
+    body > iframe {
       max-width: 100vw !important;
     }
-
 
     @media (max-width: 768px) {
       .language-bar {
@@ -84,7 +75,6 @@
         right: 0;
         flex-wrap: wrap;
       }
-
       .goog-te-combo {
         font-size: 13px;
         width: 100%;
@@ -109,45 +99,41 @@
       justify-content: space-evenly;
       padding: 4rem;
       flex-wrap: wrap;
+      height: 467px;
+      background-color: #e0ddd9;
+     
     }
-
     .container {
       max-width: 700px;
     }
-
     h1 {
       font-size: 2.5rem;
       font-weight: bold;
       line-height: 1.2;
     }
-
     h2 {
       font-size: 1.5rem;
       color: #757474;
       margin-top: 1rem;
     }
-
     .highlight-link {
       color: #08bac7;
       text-decoration: none;
     }
-
     .highlight-link:hover {
       text-decoration: underline;
     }
-
     .byline {
       font-size: 0.9rem;
       color: #999;
       margin-top: 0.5rem;
     }
-
     .hero-image img {
       width: 400px;
-      margin-bottom: -67px;
+      position: relative;
+      bottom: 20px;
       opacity: 0.9;
     }
-
     .button {
       color: #08bac7;
       margin-right: 15px;
@@ -161,6 +147,7 @@
     }
 
     /* Seção Sobre Lara */
+    
     .section2 {
       background-color: #111;
       color: #fff;
@@ -168,19 +155,16 @@
       padding: 60px 20px;
       font-family: 'Inter', sans-serif;
     }
-
     .section2 .intro-lara {
       max-width: 900px;
       margin: 0 auto;
     }
-
     .section2 h2 {
       font-size: 1.5rem;
       font-weight: 500;
       margin-bottom: 1rem;
       line-height: 1.4;
     }
-
     .section2 .ola {
       font-size: 2.5rem;
       font-weight: 700;
@@ -188,7 +172,6 @@
       display: block;
       line-height: 1.2;
     }
-
     .section2 p {
       font-size: 1.2rem;
       line-height: 1.7;
@@ -196,7 +179,6 @@
       margin-top: 1rem;
       margin-bottom: 1.5rem;
     }
-
     .section2 strong {
       color: #00f0ff;
       font-weight: 600;
@@ -206,93 +188,170 @@
       .section2 {
         padding: 1.5rem 1rem;
       }
-
       .section2 h2 {
         font-size: 1rem;
       }
-
       .section2 .ola {
         font-size: 1.8rem;
       }
-
       .section2 p {
         font-size: 0.95rem;
       }
     }
+@media (max-width: 768px) {
+  .gradient-mask {
+    position: relative;
+    max-height: 150px;
+    overflow: hidden;
+    transition: max-height 0.4s ease-out;
+  }
 
-    /* Seção AIVRSE */
+  .gradient-mask::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    background: linear-gradient(to top, rgba(33, 33, 33, 1), transparent);
+    pointer-events: none;
+    z-index: 1;
+  }
+
+  .gradient-mask.expanded {
+    max-height: 2000px;
+  }
+
+  .expand-button {
+    display: block;
+    margin: 1rem auto 0;
+    padding: 10px 20px;
+    background-color: #00f0ff;
+    color: #111;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+    z-index: 2;
+    position: relative;
+  }
+
+  .expand-button:hover {
+    background-color: #00d0df;
+  }
+}
+
+/* Desktop - mostra tudo */
+@media (min-width: 769px) {
+  .gradient-mask {
+    max-height: none;
+    overflow: visible;
+  }
+
+  .expand-button {
+    display: none;
+  }
+}
+
+    /* Seção Cards */
     .section3 {
       display: flex;
       flex-direction: column;
-      /* Para mobile */
       align-items: center;
       background-color: #333;
       gap: 40px;
       padding: 40px 20px;
     }
-
     .section3 p {
       font-size: 1.2rem;
       line-height: 1.7;
       color: #ccc;
       text-align: center;
     }
-
     .section3-container {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 20px;
-      padding: 40px;
+      gap: 60px;
+      padding: 20px;
     }
 
     /* Estilo dos Cards */
-    .service-card {
-      background-color: #1f1f1f;
-      padding: 20px;
-      border-radius: 12px;
-      text-align: center;
-      width: 100%;
-      max-width: 320px;
-      box-shadow: 0 0 5px rgba(0, 240, 255, 0.8), inset 0 0 5px rgba(0, 240, 255, 0.8);
-      color: inherit;
-      text-decoration: none;
-      transition: transform 0.3s ease;
-    }
+    /* Estilo dos Cards */
+.service-card {
+  background-color: #1f1f1f;
+  padding: 20px;
+  border-radius: 12px;
+  text-align: center;
+  width: 100%;
+  max-width: 320px;
+  box-shadow: 0 0 5px rgba(0, 240, 255, 0.8), inset 0 0 5px rgba(0, 240, 255, 0.8);
+  color: inherit;
+  text-decoration: none;
+  transition: transform 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: auto;
+}
 
-    .service-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0, 240, 255, 0.2);
-    }
+.service-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0, 240, 255, 0.2);
+}
 
-    .service-card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 10px;
-      margin-bottom: 15px;
-    }
+.service-card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
 
+.service-card .texto h3 {
+  color: #00ffff;
+  font-size: 24px;
+  margin-bottom: 10px;
+  text-align: center;
+}
 
-    .service-card .texto h3 {
-      color: #00ffff;
-      font-size: 24px;
-      margin-bottom: 10px;
-      text-align: center;
-    }
+.service-card .texto p {
+  color: #ccc;
+  font-size: 16px;
+  line-height: 1.5;
+}
 
-    .service-card .texto p {
-      color: #ccc;
-      font-size: 16px;
-      line-height: 1.5;
-    }
+/* Responsividade para Desktop */
+@media (min-width: 768px) {
+  .section3-container {
+    flex-direction: row;
+  }
 
+  .service-card {
+    text-align: left;
+  }
+}
+
+/* Responsividade para Mobile */
+@media (max-width: 768px) {
+  .service-card {
+    align-items: center;
+    text-align: center;
+  }
+
+  .service-card img {
+    margin: 0 auto 15px;
+  }
+
+  .service-card .texto {
+    text-align: center;
+  }
+}
     /* Responsividade para Desktop */
     @media (min-width: 768px) {
       .section3-container {
         flex-direction: row;
       }
-
       .service-card {
         flex-direction: column;
         text-align: left;
@@ -301,37 +360,38 @@
 
     /* Responsividade para Mobile */
     @media (max-width: 768px) {
-      .service-card {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
+    .hero {
+    flex-direction: column;
+    height: auto;
+    padding: 2rem 1rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  }
 
-      .service-card img {
-        width: 100%;
-        height: auto;
-        margin: 0 auto 15px;
-      }
+  .hero .container {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
 
-      .service-card .texto {
-        text-align: center;
-      }
-    }
-
+  .hero-image {
+    width: 80%;
+  }
+}
+  
 
     /* Footer */
-
-    footer {
-      background-color: #111;
-      color: #fff;
-      padding: 20px;
-      width: 100%;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
+footer {
+  background-color: #111;
+  color: #fff;
+  padding: 20px;
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: none; /* Evita que ele se estique */
+}
     footer .social-icons i {
       color: #00f0ff;
       font-size: 30px;
@@ -339,7 +399,6 @@
       cursor: pointer;
       transition: color 0.3s ease;
     }
-
     footer .social-icons i:hover {
       color: #08bac7;
     }
@@ -348,7 +407,6 @@
       .section3-container {
         padding: 20px 10px;
       }
-
       footer {
         padding: 20px 10px;
         box-sizing: border-box;
@@ -362,37 +420,31 @@
         padding: 2rem 1rem;
         text-align: center;
       }
-
       .hero-image img {
         width: 80%;
-        margin-bottom: -37px;
+        position: relative;
+        bottom: -35px;
       }
-
       h1 {
         font-size: 2rem;
       }
-
       h2 {
         font-size: 1.2rem;
       }
-
       .container {
         max-width: 95%;
       }
-
     }
   </style>
 </head>
-
 <body>
-
   <!-- Barra de Idiomas -->
   <div class="language-bar">
     <button onclick="translateTo('en')" aria-label="English">
-      <img src="https://flagcdn.com/gb.svg" alt="English" width="24" height="16">
+      <img src="https://flagcdn.com/gb.svg " alt="English" width="24" height="16">
     </button>
     <button onclick="translateTo('es')" aria-label="Español">
-      <img src="https://flagcdn.com/es.svg" alt="Español" width="24" height="16">
+      <img src="https://flagcdn.com/es.svg " alt="Español" width="24" height="16">
     </button>
   </div>
 
@@ -429,7 +481,7 @@
     <div class="container">
       <div class="axlara-brand">AX-LARA</div>
       <h1>Architect of Xperience</h1>
-      <h2>XR Specialist • 3D Designer • Founder <a href="#section3" class="highlight-link">AIVRSE</a></h2>
+      <h2>XR Specialist • 3D Designer</h2>
       <p class="byline">by Lara E. Negreiros</p>
       <a href="portfolio.html" class="button">Stack & Skills</a>
     </div>
@@ -439,65 +491,63 @@
   </section>
 
   <!-- Seção Sobre Lara -->
-  <section class="section2" id="lara">
-    <div class="intro-lara">
-      <h2><span class="ola">Olá,</span> sou Lara E. Negreiros.</h2>
-      <p>Criadora e desenvolvedora de experiências ambientais imersivas. Guiada pelas emoções provocadas pelos espaços,
-        busco, através da tecnologia, novas formas de criar experiências que conectem o físico ao virtual.</p>
-      <p>Minha jornada começou na arquitetura e urbanismo, com especialização em projetos arquitetônicos e
-        neuroarquitetura, onde criei experiência em percepção espacial e design efetivo de ambientes. Com o tempo,
-        surgiu o desejo e necessidade de ir além dos limites tradicionais da arquitetura, o que me levou a explorar a
-        tecnologia como novo campo de atuação.</p>
-      <p>Durante essa transição, aprofundei meus estudos em programação e descobri as tecnologias imersivas (XR), onde
-        encontrei a conexão perfeita entre minha bagagem em arquitetura e as novas possibilidades digitais. A partir
-        daí, passei a expandir minhas habilidades na criação de ambientes digitais interativos.</p>
-      <p><strong>Hoje, me especializo em criar experiências imersivas utilizando softwares e tecnologias que permitem
-          transformar espaços físicos em ambientes digitais interativos. Além disso, ofereço serviços como freelancer em
-          modelagem 3D otimizada para ambientes interativos</strong> e <strong>tours virtuais 360°</strong>, com
-        soluções personalizadas para diversos tipos de projetos.</p>
-      <p>Em breve, estarei lançando oficialmente a AIVRSE, focado na criação de mundos virtuais personalizados e no
-        desenvolvimento de experiências imersivas. Através dele, pretendo oferecer soluções inovadoras para diferentes
-        áreas e necessidades virtuais.</p>
+ <section class="section2" id="lara">
+  <div class="intro-lara">
+    <h2><span class="ola">Olá,</span> sou Lara E. Negreiros.</h2>
+
+    <!-- Conteúdo visível por padrão -->
+    <p>Criadora e desenvolvedora de experiências ambientais imersivas. Guiada pelas emoções provocadas pelos espaços,
+      busco, através da tecnologia, novas formas de criar experiências que conectem o físico ao virtual.</p>
+
+    <!-- Conteúdo que pode ser expandido -->
+    <div class="texto-conteudo" id="texto-conteudo">
+      <div class="gradient-mask">
+      <p>Minha jornada começou na arquitetura e urbanismo, com especialização em projetos arquitetônicos e neuroarquitetura, onde criei experiência em percepção espacial e design efetivo de ambientes. Com o tempo, surgiu o desejo e necessidade de ir além dos limites tradicionais da arquitetura, o que me levou a explorar a tecnologia como novo campo de atuação.</p>
+      <p>Durante essa transição, aprofundei meus estudos em programação e descobri as tecnologias imersivas (XR), onde encontrei a conexão perfeita entre minha bagagem em arquitetura e as novas possibilidades digitais. A partir daí, passei a expandir minhas habilidades na criação de ambientes digitais interativos.</p>
+      <p><strong>Hoje, me especializo em criar experiências imersivas utilizando softwares e tecnologias que permitem transformar espaços físicos em ambientes digitais interativos. Além disso, ofereço serviços como freelancer em modelagem 3D otimizada para ambientes interativos</strong> e <strong>tours virtuais 360°.</strong></p>
+      <p>Em breve, lançarei oficialmente um projeto em realidade virtual dedicado à criação de ambientes imersivos que promovam conexão interna, meditação e bem-estar. Unindo minha experiência técnica ao propósito de oferecer às pessoas um espaço virtual onde possam vivenciar equilíbrio e reconexão consigo mesmas, sem depender de um local físico.</p>
     </div>
-  </section>
+    </div>
 
+    <!-- Botão de expandir -->
+    <button id="btn-expandir" class="expand-button">Ver mais</button>
+  </div>
+</section>
+<script>
+  const btn = document.getElementById('btn-expandir');
+  const conteudo = document.querySelector('.gradient-mask');
+
+  if (btn && conteudo) {
+    btn.addEventListener('click', () => {
+      conteudo.classList.toggle('expanded');
+      btn.textContent = conteudo.classList.contains('expanded') ? 'Ver menos' : 'Ver mais';
+    });
+  }
+</script>
+  <!-- Container dos Cards -->
   <section class="section3" id="section3">
-    <img src="/imagens/logoaivrse1transp.png" alt="logoaivrse" width="300px">
-    <p>Bem-vindo ao universo da tecnologia imersiva — onde sonhos ganham forma, cor e movimento,
-      transformando projetos em experiências reais. <br> Conheça e explore nossos projetos em Tour Virtual 360°. Em
-      breve, também ofereceremos experiências em Realidade Aumentada e Realidade Virtual.</p>
-
-    <!-- Container dos Cards -->
     <div class="section3-container">
       <!-- Card 1 -->
       <a href="projetos-tour.html" class="service-card">
         <img src="imagens/360img.png" alt="Tour Virtual 360°">
         <div class="texto">
-          <h3>Tour Virtual 360°</h3>
-          <p>Navegue e explore ambientes realistas em 360°.</p>
+          <h3>Projetos Virtuais</h3>
+          <p>Confira os projetos desenvolvidos com tours imersivos e ambientes em 3D, criados para explorar espaços com realismo e interatividade.</p>
         </div>
       </a>
 
       <!-- Card 2 -->
       <div class="service-card blur">
-        <img src="imagens/arimg.png" alt="Realidade Aumentada">
-        <div class="texto">
-          <h3>Realidade Aumentada</h3>
-          <p>Visualize objetos em escala real através da câmera do celular ou tablet.</p>
-        </div>
-      </div>
-
-      <!-- Card 3 -->
-      <div class="service-card blur">
         <img src="imagens/VR_img.png" alt="Realidade Virtual">
         <div class="texto">
-          <h3>Realidade Virtual</h3>
-          <p>Experiências totalmente imersivas utilizando óculos VR e interações intuitivas.</p>
+          <h3>Em breve</h3>
+          <p>Um novo projeto em <strong> Realidade virtual </strong>realidade virtual para criar ambientes personalizados com imersão total.</p>
         </div>
       </div>
     </div>
   </section>
-  
+
+  <!-- Footer -->
   <footer>
     <div class="social-icons">
       <a href="https://github.com/larangrs " target="_blank"><i class="fab fa-github"></i></a>
@@ -505,7 +555,6 @@
       <a href="https://wa.me/+5584996249406 " target="_blank"><i class="fab fa-whatsapp"></i></a>
     </div>
   </footer>
-
+  
 </body>
-
 </html>
