--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@ footer {
         <img src="imagens/VR_img.png" alt="Realidade Virtual">
         <div class="texto">
           <h3>Em breve</h3>
-          <p>Um novo projeto em <strong> Realidade virtual </strong>realidade virtual para criar ambientes personalizados com imersão total.</p>
+          <p>Um novo projeto em <strong> Realidade virtual </strong>para criar ambientes personalizados com imersão total.</p>
         </div>
       </div>
     </div>
