--- a/projetos-tour.html
+++ b/projetos-tour.html
@@ -180,21 +180,25 @@
       z-index: 999;
     }
 
-    .back-button {
-      background-color: #1a1a1a;
-      border: 1px solid #00fff7;
-      color: #00fff7;
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      font-size: 1em;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
+    .back-button-container a {
+    text-decoration: none;
+}
+   .back-button {
+  background-color: #1a1a1a;
+  border: 1px solid #00fff7; 
+  color: #00fff7;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-size: 1em;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+   margin-bottom: 40px;
+}
     .back-button::before {
       content: "←";
       font-size: 1.2em;
@@ -263,13 +267,15 @@
       }
       .back-button-container {
         bottom: 70px;
-        left: 50%;
+        left: 10%;
         transform: translateX(-50%);
       }
       .back-button {
         width: 50px;
         height: 50px;
         font-size: 0.9em;
+        text-decoration: none;
+        margin-bottom: -10px;
       }
     }
 
@@ -295,6 +301,7 @@
         border-radius: 50%;
         font-size: 0.9em;
         padding: 0;
+        text-decoration: none;
       }
     }
   </style>
