--- a/index.html
+++ b/index.html
@@ -526,13 +526,14 @@ footer {
 </script>
   <!-- Container dos Cards -->
   <section class="section3" id="section3">
+    <p><i> Em desenvolvimento... </i></p>
     <div class="section3-container">
       <!-- Card 1 -->
       <a href="projetos-tour.html" class="service-card">
         <img src="imagens/360img.png" alt="Tour Virtual 360°">
         <div class="texto">
-          <h3>Projetos Virtuais</h3>
-          <p>Confira os projetos desenvolvidos com tours imersivos e ambientes em 3D, criados para explorar espaços com realismo e interatividade.</p>
+         <h3>Projetos & Serviços</h3>
+    <p>Encante seus clientes com experiências imersivas! Conheça nossos pacotes de tour virtual e destaque seus projetos com inovação e tecnologia.</p>
         </div>
       </a>
 
