--- a/tour-galeria.html
+++ b/tour-galeria.html
@@ -142,7 +142,7 @@
         },
         "scenes": {
             "cena1": {
-                "title": "Fachada",
+                "title": "",
                 "hfov": 110,
                 "pitch": 0,
                 "yaw": 0,
