--- a/portproj.html
+++ b/portproj.html
@@ -341,6 +341,19 @@
         </div>
       </div>
     </div>
+       <!-- Projeto 5 -->
+      <div class="project-card">
+        <div class="project-preview">
+          <iframe src="tour-av12.html" loading="lazy" title="Tour Escritório"></iframe>
+        </div>
+        <div class="project-info">
+          <h3 class="project-title">AV 12 Gallery</h3>
+          <p class="project-description"></p>
+          <a href="#" class="project-link expand-btn" data-src="tour-av12.html">Ver Projeto Completo</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <!-- Modal para visualização expandida -->
   <div class="modal" id="projectModal">
