--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins :wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css " rel="stylesheet">
   <style>
+     :root {
+      --primary: #00fff7;
+      --primary-dark: #00cccc;
+      --secondary: #25d366;
+      --dark: #0d0d0d;
+      --dark-light: #1a1a1a;
+      --light: #f0f0f0;
+      --gray: #ccc;
+    }
+
  body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
@@ -83,14 +93,64 @@ section.section3 {
     }
 
     /* Marca AX-LARA */
-    .axlara-brand {
-      font-size: 1rem;
-      font-weight: bold;
-      color: #08bac7;
-      margin-bottom: 0.5rem;
+      .logo {
+      font-family: 'Orbitron', 'Montserrat', sans-serif;
+      font-size: 1.6rem;
+      letter-spacing: 3px;
+      font-weight: 700;
+      color: #333;
+      position: relative;
+      display: inline-block;
+      padding-bottom: 5px;
       text-transform: uppercase;
-      letter-spacing: 2px;
     }
+
+    .logo i {
+      font-style: normal;
+      color: var(--primary);
+      display: inline-block;
+      transform: translateZ(0);
+      text-shadow: 
+        0 0 5px var(--primary),
+        0 0 10px var(--primary),
+        0 0 20px var(--primary),
+        0 0 40px rgba(0, 32, 31, 0.5);
+      animation: pulse 2s infinite alternate;
+    }
+
+    @keyframes pulse {
+      0% {
+        text-shadow: 
+          0 0 5px var(--primary),
+          0 0 10px var(--primary),
+          0 0 20px var(--primary),
+          0 0 40px rgba(1, 111, 108, 0.5);
+      }
+      100% {
+        text-shadow: 
+          0 0 10px var(--primary),
+          0 0 20px var(--primary),
+          0 0 30px var(--primary),
+          0 0 50px rgba(0, 109, 106, 0.8);
+      }
+    }
+
+    .logo::after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background: linear-gradient(90deg, transparent, var(--primary), transparent);
+      transform: scaleX(0);
+      transition: transform 0.6s ease;
+    }
+
+    .logo:hover::after {
+      transform: scaleX(1);
+    }
+
 
     /* Seção Hero */
     .hero {
@@ -479,7 +539,7 @@ footer {
   <!-- Seção Hero -->
   <section class="hero">
     <div class="container">
-      <div class="axlara-brand">AX-LARA</div>
+    <div class="logo">A<i>X</i>LARA</div>
       <h1>Architect of Xperience</h1>
       <h2>XR Specialist • 3D Designer</h2>
       <p class="byline">by Lara E. Negreiros</p>
