--- a/index.html
+++ b/index.html
@@ -104,36 +104,25 @@ section.section3 {
       padding-bottom: 5px;
       text-transform: uppercase;
     }
-
     .logo i {
-      font-style: normal;
-      color: var(--primary);
-      display: inline-block;
-      transform: translateZ(0);
-      text-shadow: 
-        0 0 5px var(--primary),
-        0 0 10px var(--primary),
-        0 0 20px var(--primary),
-        0 0 40px rgba(0, 32, 31, 0.5);
-      animation: pulse 2s infinite alternate;
-    }
+  font-style: normal;
+  color: var(--primary);
+  display: inline-block;
+  text-shadow: 
+    0 0 1px var(--primary),
+    0 0 2px rgba(0, 255, 247, 0.3);
+  animation: none; /* Removi a animação para ficar mais discreto */
+}
 
-    @keyframes pulse {
-      0% {
-        text-shadow: 
-          0 0 5px var(--primary),
-          0 0 10px var(--primary),
-          0 0 20px var(--primary),
-          0 0 40px rgba(1, 111, 108, 0.5);
-      }
-      100% {
-        text-shadow: 
-          0 0 10px var(--primary),
-          0 0 20px var(--primary),
-          0 0 30px var(--primary),
-          0 0 50px rgba(0, 109, 106, 0.8);
-      }
-    }
+/* Se quiser manter uma animação MUITO sutil: */
+@keyframes subtle-pulse {
+  0% { opacity: 0.9; }
+  100% { opacity: 1; }
+}
+
+.logo i.with-animation {
+  animation: subtle-pulse 3s infinite alternate;
+}
 
     .logo::after {
       content: "";
@@ -194,10 +183,28 @@ section.section3 {
       bottom: 20px;
       opacity: 0.9;
     }
+  
     .button {
-      color: #08bac7;
-      margin-right: 15px;
-    }
+    display: inline-block;
+    padding: 12px 30px;
+    border: none;
+    border-radius: 30px;
+    text-decoration: none;
+    font-weight: 600;
+    transition: all 0.3s ease;
+    background: linear-gradient(135deg, rgba(8, 186, 199, 0.8), rgba(0, 240, 255, 0.6));
+    color: white;
+    font-size: 1rem;
+    letter-spacing: 0.5px;
+    box-shadow: 0 4px 15px rgba(0, 240, 255, 0.3);
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+.button:hover {
+    background: linear-gradient(135deg, rgba(8, 186, 199, 1), rgba(0, 240, 255, 0.8));
+    box-shadow: 0 6px 20px rgba(0, 240, 255, 0.4);
+    transform: translateY(-2px);
+}
 
     @media (max-width: 600px) {
       .button-container {
@@ -589,7 +596,7 @@ footer {
     <p><i> Em desenvolvimento... </i></p>
     <div class="section3-container">
       <!-- Card 1 -->
-      <a href="projetos-tour.html" class="service-card">
+      <a href="projetos-servico.html" class="service-card">
         <img src="imagens/360img.png" alt="Tour Virtual 360°">
         <div class="texto">
          <h3>Projetos & Serviços</h3>
